@@ -12,6 +12,8 @@ What's New in Python 2.6 alpha 1?
 Core and builtins
 -----------------
 
+- Patch #1444529: the builtin compile() now accepts keyword arguments.
+
 - Bug #1678647: write a newline after printing an exception in any
   case, even when converting the value to a string failed.
 
